package com.fdmgroup;

enum Action {
    CHECK_FOR_LATE_BOOKS,
    REMOVE_CHARGES_FROM_ACCOUNT,
    REMOVE_BOOK_FROM_BORROWED_BOOKS,
    ADD_BOOK_TO_BORROWED_BOOKS
}
