package com.fdmgroup;

public interface ManageAccounts {
    public void manageAccount(Account account, Action action);
}
