package com.fdmgroup;

public interface SearchForBook {
    public LibraryBook searchLibrary(String searchCriteria);
}
